# delilah-host

./: .gitignore  README.md
examples/: Makefile  clear_cache.c  clone.c  device_info.c  hw.c  hw_ebpf.c  multi_bench.c  shared.c  simple  simple.c
examples/programs/: .gitignore  CMakeLists.txt  ebpf_filter.c  hw_filter.c
src/driver/: 10-delilah.rules  Makefile  delilah_cdev.c  delilah_mod.c  delilah_mod.h  pci-dma-compat.h  sts_queue.c  sts_queue.h  xdma_sgdma.c  xdma_sgdma.h
src/driver/xdma/: cdev_bypass.c  cdev_ctrl.c  cdev_sgdma.c  cdev_sgdma.h  cdev_xvc.c  cdev_xvc.h  libxdma.c  libxdma.h  libxdma_api.h  version.h  xdma_cdev.c  xdma_cdev.h  xdma_mod.c  xdma_mod.h  xdma_thread.c  xdma_thread.h
src/include/: delilah_uapi.h
